# gcp-cloudflare-dyndns

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  pr.yml  release.yml
src/gcp_cloudflare_dyndns/: __main__.py
tests/: test_gcp_cloudflare_dyndns.py
