[tool.poetry]
name = "gcp-cloudflare-dyndns"
version = "0.1.3"
description = ""
authors = ["Sri Ramanujam"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "^2.12.6"
requests = "^2.28.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
