[tool.poetry]
name = "gcp-cloudflare-dyndns"
version = "0.1.3"
description = ""
authors = ["Sri Ramanujam"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "^2.16.1"
requests = "^2.31.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
